tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__PrisonGangsareOb-AAAAAAAAAAAAAAAAAAALLQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2861,
  "prerequisites": [
    95
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Want lots of cobble, stone, obsidian, or another type of rock? This is the machine for you!\n\n§lCobble:§r Water and lava on the side.\n§lStone:§r Water on the side, lava on top.\n§lObsidian:§r Lava on top or side, Water on side, and redstone in the machine.\n§lNetherrack:§r Lava on top or side, Water on side, and glowstone in the machine.\n§lBasalt:§r Lava on side, soul sand below, and one packed ice in the machine.\n§lCobbled Deepslate:§r Lava on side, soul sand below, and one magma block in the machine.\n\nYou of course need to power it. If you don't want to spend power on cobble, do it the ExU way with the WIU.\n\nYou need to toggle the ghost circuit to circuit 1 or 6 depending on the recipe, check NEI.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lPrison Gangs are Obsolete",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    95
  ],
  "rewards": [],
  "tasks": []
}
