tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__ProcessSomeCertu-AAAAAAAAAAAAAAAAAAACzA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 716,
  "optional_prerequisites": [
    88,
    1166
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "For the emitter and the sensor you'll need to get some certus quartz.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lProcess Some Certus Quartz",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
