tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__RefinedFirestone-njE33db1TxaiJhEBA16E4A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15489373449375089888,
  "prerequisites": [
    17965788175562213466,
    1279
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Cut Firestone is the basic shape for producing Refined Firestone.\nUse a Diamond Lens or Flint Lens for cutting.\nIt is then fired with lava in the EBF.\n\nLastly it is thrown into lava and charged by absorbing lava blocks around it.\nIt needs 5000 lava blocks to be fully charged, so a large lava lake is required, preferably in the Nether.\n\n[note]If the firestone breaks, it can be repaired with lava in the EBF and recharged.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lRefined Firestone",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17965788175562213466,
    1279
  ],
  "rewards": [],
  "tasks": []
}
