tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__SavingMetalWithB-AAAAAAAAAAAAAAAAAAAAaQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 105,
  "prerequisites": [
    95
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Instead of a 3:2 ratio of ingots to plates, this machine allows for 1:1. This saves an enormous amount of metal, so make it ASAP.\n\nBTW if you want foils, just run the plate back through. There are other circuit modes, but you can discover them later.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lSaving Metal With Bending",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    95
  ],
  "rewards": [],
  "tasks": []
}
