tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__SiftingMachine-AAAAAAAAAAAAAAAAAAADZQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 869,
  "prerequisites": [
    95
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Do you need flawless or exquisite diamonds, emeralds, rubies or other gems? Or, interested in getting more flint, coal, or whatnot out of your ore? Well then it's time for you to make a Sifting Machine.\n\nYou can find small Zinc ores (look in NEI) or you can search the Nether for Sphalerite.\n\nThe Sifter only takes Purified ores, but you can get these easily by throwing Crushed ores into a Cauldron with water.\n\n[note]Note that you need Polyethylene to make this machine![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lSifting Machine",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    95
  ],
  "rewards": [],
  "tasks": []
}
